[project]
name = "rmcloud2pdf"
version = "0.1.0"
description = "Python program that fetches documents from Remarkable cloud and converts all notes to pdf"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
    "svglib>=1.5.1",
    "xdg>=5.1.1",
    "pdfrw>=0.4",
    "reportlab>=4.4.3",
    "rmc>=0.3.0",
    "pypdf2>=3.0.1",
]
